...
    BaseScreen(
        viewModel = viewModel,
        topBar = {
            CenterAlignedTopAppBar(
                title = { 
                    Text(
                        text = "Search Cocktails",
                        maxLines = 1,
                        overflow = TextOverflow.Ellipsis
                    )
                },
                navigationIcon = {
                    IconButton(onClick = onBackPressed) {
...
